[package]
name = "kla"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "kla"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive", "cargo", "string", "env"] }
config = "0.13.2"
http = "1.0.0"
reqwest = {version = "0.12", features = ["blocking", "stream", "gzip", "brotli", "deflate", "rustls-tls"]}
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"]}
toml = "0.5.9"
url = "2.3.1"
tera = { version = "1", default-features = false }
serde_json = "1.0.88"
git-version = "0.3.5"
regex = "1.8.3"
duration-string = "0.3.0"
serde = "1.0.228"
skim = "0.20.5"
crossbeam-channel = "0.5.15"
log = "0.4.28"
colog = "1.4.0"
aws-sigv4 = "1.3.5"
anyhow = "1.0.100"
reqwest-middleware = "0.4.2"
async-trait = "0.1.89"
